syntax = "proto3";

import "ptypes/timestamp/timestamp.proto";

package protodef;

service FarmService {

  rpc StartDaryl(StartDarylRequest) returns (StartDarylResponse);
  rpc HasDaryl(HasDarylRequest) returns (HasDarylResponse);

}

// StartDaryl

message StartDarylRequest {
  string daryl_identifier = 1;
}

// HasDaryl

message HasDarylRequest {
  string daryl_identifier = 1;
}

// Response

message StartDarylResponse {
}

message HasDarylResponse {
  bool response = 1;
}

service DarylService {

  rpc UserMessage(UserMessageRequest) returns (UserMessageResponse);
  rpc AddHabit(AddHabitRequest) returns (AddHabitResponse);
  rpc StartWorkSession(StartWorkSessionRequest) returns (StartWorkSessionResponse);
  rpc CancelWorkSession(CancelWorkSessionRequest) returns (CancelWorkSessionResponse);
  rpc RefuseSessionSlice(RefuseSessionSliceRequest) returns (RefuseSessionSliceResponse);

}

message Daryl {
  // @inject_tag: db:"id" access:"s"
  string id = 1;
  // @inject_tag: db:"name" access:"i,s"
  string name = 2;
  // @inject_tag: db:"password" access:"i,u,s"
  string password = 3;
}

// UserMessage

message UserMessageRequest {
  string daryl_identifier = 1;
  Message message = 2;
}

message MessageLink {
  // @inject_tag: db:"link" access:"i,u,s"
  string link = 1;
}

message Message {
  // @inject_tag: db:"id" access:"s"
  string id = 1;
  // @inject_tag: db:"text" access:"i,u,s"
  string text = 2;
  // @inject_tag: db:"at" access:"i,s"
  google.protobuf.Timestamp at = 3;
  // @inject_tag: db:"done" access:"i,u,s"
  bool done = 4;
  // @inject_tag: db:"todo" access:"i,u,s"
  string todo = 5;
  repeated MessageLink links = 6;
}

message UserMessageResponse {
  Message message = 2;
}

// AddHabit

message HabitStat {
  // @inject_tag: db:"urgent" access:"i,u,s"
  uint32 urgent = 1;
  // @inject_tag: db:"nMissed" access:"i,u,s"
  uint32 nMissed = 2;
}

message Habit {
  // @inject_tag: db:"id"
  string id = 1;
  // @inject_tag: db:"title" access:"i,u,s"
  string title = 2;
  // @inject_tag: db:"duration" access:"i,u,s"
  string duration = 3;
  google.protobuf.Timestamp deadline = 4;
  // @inject_tag: db:"cron" access:"i,u,s"
  string cron = 6;
  google.protobuf.Timestamp lastDone = 7;
  HabitStat stats = 8;
}

message AddHabitRequest {
  string daryl_identifier = 1;

  Habit habit = 2;
}

message AddHabitResponse {
  Habit habit = 2;
}

// StartWorkSession

message SessionSlice {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  // @inject_tag: db:"habit" access:"i,u,s"
  Habit habit = 3;
}

message Session {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  // @inject_tag: db:"slices" access:"i,u,s"
  repeated SessionSlice slices = 3;
}

message SessionConfig {
  string duration = 1;
}

message StartWorkSessionRequest {
  string daryl_identifier = 1;
  SessionConfig config = 2;
}

message StartWorkSessionResponse {
  Session session = 2;
}

message CancelWorkSessionRequest {
  string daryl_identifier = 1;
}

message CancelWorkSessionResponse {
}

message SessionSliceIndex {
  uint32 index = 1;
}

message RefuseSessionSliceRequest {
  string daryl_identifier = 1;
  SessionSliceIndex index = 2;
}

message RefuseSessionSliceResponse {
}
